<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/tabcolor"
        android:gravity="center"
        android:textSize="28dp"
        android:textColor="@color/colorWhite"
        android:text="@string/order_querytitle"/>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18dp"
            android:text="@string/billno"/>
        <EditText
            android:id="@+id/tbBillNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:maxLines="1"
            android:padding="5dp"
            android:background="@color/palewhite"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18dp"
            android:text="@string/agent"/>
        <EditText
            android:id="@+id/tbAgent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:maxLines="1"
            android:padding="5dp"
            android:background="@color/palewhite"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18dp"
            android:text="@string/product"/>
        <EditText
            android:id="@+id/tbProduct"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:maxLines="1"
            android:padding="5dp"
            android:background="@color/palewhite"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18dp"
            android:text="@string/ln" />
        <EditText
            android:id="@+id/tbLN"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:maxLines="1"
            android:padding="5dp"
            android:background="@color/palewhite"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18dp"
            android:text="@string/barcode"/>
        <EditText
            android:id="@+id/tbBarcode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:maxLines="1"
            android:padding="5dp"
            android:background="@color/palewhite"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">
        <Button
            android:id="@+id/delBtn"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:textSize="18dp"
            android:text="@string/btnDelBill"/>

        <Button
            android:id="@+id/quitBtn"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:textSize="18dp"
            android:text="@string/quitbtn"/>
    </LinearLayout>
</LinearLayout>