<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout android:orientation="horizontal"
        android:id="@+id/scan_titile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:gravity="center"
            android:padding="10dp"
            android:background="@color/color_title"
            android:textSize="25dp"
            android:textColor="@color/colorWhite"
            android:text="@string/gm_scantext"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/num_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/scan_titile"
        android:padding="5dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="19dp"
            android:gravity="center"
            android:text="@string/bill_num"/>
        <Spinner
            android:id="@+id/num_spinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            ></Spinner>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/warehouse_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/num_linear"
        android:padding="5dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="18dp"
            android:gravity="center"
            android:text="@string/warehouse"/>
        <EditText
            android:id="@+id/tbWarehouse"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:maxLines="1"
            android:background="@color/palewhite"
            android:padding="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/product_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/warehouse_linear"
        android:padding="5dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="18dp"
            android:gravity="center"
            android:text="@string/product"/>
        <EditText
            android:id="@+id/tbProduct"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:maxLines="1"
            android:background="@color/palewhite"
            android:padding="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/pr_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_linear"
        android:padding="5dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="18dp"
            android:gravity="center"
            android:text="@string/in_pr"/>

        <EditText
            android:id="@+id/tbPR"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/palewhite"
            android:maxLines="1"
            android:padding="5dp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ln_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pr_linear"
        android:padding="5dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="18dp"
            android:gravity="center"
            android:text="@string/in_ln"/>
        <EditText
            android:id="@+id/tbLN"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:maxLines="1"
            android:background="@color/palewhite"
            android:padding="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/code_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ln_linear"
        android:padding="5dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="18dp"
            android:gravity="center"
            android:text="@string/barcode"/>
        <EditText
            android:id="@+id/tbBarcode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:maxLines="1"
            android:padding="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/gxLinear"
        android:layout_below="@id/code_linear"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right"
            android:textSize="20dp"
            android:text="@string/gx_group"/>
        <TextView
            android:id="@+id/curGroup"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left"
            android:textSize="20dp"
            android:textColor="@color/colorRed"
            android:text="0/0"/>
    </LinearLayout>

    <!-- 产品列表 -->
    <LinearLayout
        android:id="@+id/listID"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_below="@id/num_linear">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="选择产品"
            android:textSize="15dp"
            android:background="@color/tabcolor"
            android:textColor="@color/colorWhite"/>
        <ListView
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:transcriptMode="normal"
            android:divider="@color/tabcolor"
            android:dividerHeight="1dp"
            android:background="@color/palewhite"
            android:fadeScrollbars="false"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:scrollbars="vertical">
        </ListView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/tabcolor">
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/presetLiner"
        android:layout_below="@id/gxLinear"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="35dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:gravity="center"
            android:textSize="18dp"
            android:text="@string/lbCurPreset"/>
        <TextView
            android:id="@+id/lbCurPreset"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="18dp"
            android:textColor="@color/colorRed"
            android:gravity="center"
            android:text="0"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:gravity="center"
            android:textSize="18dp"
            android:text="@string/lbBillPreset"/>
        <TextView
            android:id="@+id/lbBillPreset"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="18dp"
            android:textColor="@color/colorRed"
            android:gravity="center"
            android:text="0"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/countLiner"
        android:layout_below="@id/presetLiner"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="35dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:gravity="center"
            android:textSize="18dp"
            android:text="@string/lbCurCount"/>
        <TextView
            android:id="@+id/lbCurCount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="18dp"
            android:textColor="@color/colorRed"
            android:gravity="center"
            android:text="0"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:gravity="center"
            android:textSize="18dp"
            android:text="@string/lbBillCount"/>
        <TextView
            android:id="@+id/lbBillCount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20dp"
            android:textColor="@color/colorRed"
            android:gravity="center"
            android:text="0"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/btnLiner"
        android:layout_below="@id/countLiner"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="50dp"
        android:layout_marginTop="5dp">
        <Button
            android:id="@+id/btn_Lock"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textSize="18dp"
            android:text="@string/btnLock"/>
        <Button
            android:id="@+id/btn_Upload"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textSize="18dp"
            android:text="@string/btnUpload"/>
        <Button
            android:id="@+id/btn_DelBill"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textSize="18dp"
            android:text="@string/btnDelBill"/>
        <Button
            android:id="@+id/btn_Quit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textSize="18dp"
            android:text="@string/btnQuit"/>
    </LinearLayout>
</RelativeLayout>